# py-ed25519-bindings

./: .gitignore  Cargo.toml  README.md  tests.py
.github/workflows/: pypi.yml  test.yml
src/: lib.rs
