[package]
name = "py-ed25519-bindings"
description = "Python bindings for the ed25519-dalek RUST crate"
authors=["openAware B.V."]
version = "0.1.0"
repository = "https://github.com/polkascan/py-ed25519-bindings"
homepage = "https://github.com/polkascan/py-ed25519-bindings"
license = "GPL-3.0+"
readme = "README.md"
edition = "2018"

[dependencies]
ed25519-dalek = { version = "1.0.0-pre.3", features = ["nightly"] }
rand = "0.6.5"

[lib]
name = "ed25519"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.9.2"
features = ["extension-module"]

[package.metadata.maturin]
maintainer = "openAware B.V."
maintainer-email = "legal@openaware.com"
classifier = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7"
]
