[package]
name = "py-ed25519-bindings"
description = "Python bindings for the ed25519-dalek RUST crate"
authors=["Stichting Polkascan (Polkascan Foundation)"]
version = "1.0.2"
repository = "https://github.com/polkascan/py-ed25519-bindings"
homepage = "https://github.com/polkascan/py-ed25519-bindings"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "1.0.1", features = ["nightly"] }
rand = "0.6.5"

[lib]
name = "ed25519_dalek"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]

[package.metadata.maturin]
maintainer = "Stichting Polkascan (Polkascan Foundation)"
maintainer-email = "legal@polkascan.org"
classifier = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
